MDEV-24834 Assertion mtr->memo_contains_flagged() in btr0cur.cc:1500

A too strict debug assertion was introduced in
commit 03ca6495df31313c96e38834b9a235245e2ae2a8 (MDEV-24142).
It turns out that row_ins_sec_index_entry_low() may acquire a stronger
latch on the index. The old rw_lock_own(..., RW_LOCK_S) assertion
would hold also for the SX (Update) latch mode.

btr_cur_search_to_nth_level_func(): Relax the assertion to require
that the mini-transaction hold any of S or U latch.